--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,257 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adesk</title>
+  <link rel="stylesheet prefetch" href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css">
 </head>
 <body>
-  
+    <header class="menu">
+        <div class="menu__flex">
+          <img class="menu-logo" src="../src/img/logo.svg" alt="logo" width="104" height="24">
+          <ul class="menu__list">
+            <li class="menu__list-item">Возможности</li>
+            <li class="menu__list-item">Решения</li>
+            <li class="menu__list-item">Ресурсы</li>
+            <li class="menu__list-item">Блог</li>
+            <li class="menu__list-item">Отзывы</li>
+            <li class="menu__list-item">Цены</li>
+          </ul>
+          <div class="button-conteiner">
+            <button class="button demo"><img class="btm-img" src="../src/img/Alina.png" alt="#" width="22" height="22">Записаться на демо</button>
+            <button class="button in">Войти</button>
+            <button class="button registration">Зарегистрироваться</button>
+          </div>
+        </div>
+    </header>
+    <section class="balance">
+      <div class="balance__conteiner">
+        <h1 class="h1">Баланс</h1>
+        <p class="balance__paragraph">Для руководителя, который хочет эффективно распоряжаться ресурсами компании и извлекать из них максимум прибыли.</p>
+        <button class="button button__balance">Протестировать бесплатно</button>
+        <img class="balance__img" src="../src/img/balance-hero.png" alt="hero">
+      </div>
+    </section>
+    <section class="balance-determination">
+      <div class="standard-container balance-determination__flex">
+        <img class="balance-determination__img" src="../src/img/jar with coins.png" alt="#">
+        <p class="balance-determination__description">Баланс — <strong>главный отчет собственника</strong>. Он поможет вам понять, где кроется прибыль, какими активами обладает бизнес и насколько эффективно они используются.</p>
+      </div>
+    </section>
+    <section class="financial-vision">
+      <div class="standard-container standart-module-flex">
+        <div class="blok ">
+          <h2 class="h2 financial-vision__h2">Получите полную картину финансов компании</h2>
+          <p class="#">Где заморожена прибыль? Богатеет ли компания со временем? Кому принадлежит бизнес — вам или кредиторам? Насколько рационально используются ресурсы?</p>
+          <p class="#">Все ответы ждут вас в балансе.</p>
+        </div>
+        <img src="../src/img/financial-vision-img.png" alt="#" width="558" height="540">
+      </div>
+    </section>
+    <section class="business-health">
+      <div class="standard-container standart-module-flex business-health__flex">
+        <div class="blok ">
+          <h2 class="h2 business-health__h2">Оперативно оценивайте здоровье бизнеса</h2>
+          <p class="#">На основе отчета Adesk сам посчитает важные метрики собственника: ROE, ликвидность, финансовую независимость и эффективность бизнеса, как актива.</p>
+          <p class="#">Остается только проанализировать показатели и скорректировать стратегию развития компании.</p>
+        </div>
+        <img src="../src/img/business-health-img.png" alt="#" width="558" height="540">
+      </div>
+    </section>
+    <section class="blok-video">
+      <div class="standard-container">
+        <h2 class="h2 blok-video__h2">Построить отчет поможет мастер сборки баланса 🧙‍♂</h2>
+        <p class="paragraph blok-video__paragraph">Специальный робот вместе с вами пройдет все этапы сверки денег, запасов, обязательств и капитала, чтобы активы точно сошлись с пассивами.</p>
+        <div class="conteiner-for-video">
+          <img src="../src/img/head-video.png" alt="#" width="950">
+          <video muted autoplay loop class="blok-video__video" poster="../src/img/video.png">
+            <source src="vidios/balance_wizard.mp4" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </section>
+    <section class="assembly">
+      <div class="standard-container standart-module-flex ">
+        <div class="blok ">
+          <h2 class="h2 assembly__h2">Соберите один раз, а дальше — мы сами</h2>
+          <p class="#">После первичной сборки отчета сервис будет сам обновлять его на основании изменений данных в сервисе.</p>
+          <p class="#">Отчет строится по принципу двойной записи, то есть каждое ваше действие в Adesk автоматически отображается в активах и пассивах.</p>
+        </div>
+        <img src="../src/img/assembly.png" alt="#" width="558" height="540">
+      </div>
+    </section>
+    <section class="offer">
+      <div class="standard-container">
+        <h2 class="h2 offer__h2">Узнайте, как ваш бизнес распоряжается ресурсами</h2>
+        <p class="paragraph offer__paragraph">Зарегистрируйтесь и получите 14 дней бесплатного доступа к балансовому отчету и другим инструментам Adesk.</p>
+        <div class="button-conteiner">
+          <button class="button offer__button">Начать учёт в Adesk</button>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="standard-container">
+        <div class="footer__logo">
+          <img src="../src/img/logo-footer.svg" alt="logo" width="44" height="44">
+          <p class="footer__logo-paragraph">Рассчитывайте на <b>Adesk</b></p>
+        </div>
+        <div class="footer-navigation">
+          <div class="footer-navigation__item">
+            <ul>
+              <li>
+                <h3 class="h3">Возможности</h3>
+              </li>
+              <li>
+                <a href="#">Движение денежных средств</a>
+              </li>
+              <li>
+                <a href="#">Прибыль и убытки</a>
+              </li>
+              <li>
+                <a href="#">Баланс</a>
+              </li>
+              <li>
+                <a href="#">Учет обязательств</a>
+              </li>
+              <li>
+                <a href="#">Анализ расходов</a>
+              </li>
+              <li>
+                <a href="#">Платежный календарь</a>
+              </li>
+              <li>
+                <a href="#">Бюджетирование</a>
+              </li>
+              <li>
+                <a href="#">Учет товаров и запасов</a>
+              </li>
+              <li>
+                <a href="#">Согласование платежей</a>
+              </li>
+              <li>
+                <a href="#">Робот-помощник и AI</a>
+              </li>
+              <li>
+                <a href="#">Интеграции</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-navigation__item">
+            <ul>
+              <li>
+                <h3 class="h3">Adesk для бизнеса</h3>
+              </li>
+              <li>
+                <a href="#">Digital-агентства</a>
+              </li>
+              <li>
+                <a href="#">Маркетинговые агентства</a>
+              </li>
+              <li>
+                <a href="#">Стартапы</a>
+              </li>
+              <li>
+                <a href="#">Кафе и рестораны</a>
+              </li>
+              <li>
+                <a href="#">Строительные компании</a>
+              </li>
+              <li>
+                <a href="#">Юридические фирмы</a>
+              </li>
+              <li>
+                <a href="#">Фрилансеры</a>
+              </li>
+              <li>
+                <a href="#">Adesk vs Таблицы</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-navigation__item">
+            <ul>
+              <li>
+                <h3 class="h3">Ресурсы</h3>
+              </li>
+              <li>
+                <a href="#">Журнал о финансах</a>
+              </li>
+              <li>
+                <a href="#">Базовый курс о финансах</a>
+              </li>
+              <li>
+                <a href="#">Расширенный курс по учету<img class="academic-cap" src="../src/img/academic-cap.svg" alt="#"></a>
+              </li>
+              <li>
+                <a href="#">Шаблон финансовой модели</a>
+              </li>
+              <li>
+                <a href="#">Внедрение под ключ</a>
+              </li>
+              <li>
+                <a href="#">Партнерская программа</a>
+              </li>
+              <li>
+                <a href="#">Бонусы от партнеров</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-navigation__item">
+            <ul>
+              <li>
+                <h3 class="h3">Информация</h3>
+              </li>
+              <li>
+                <a href="#">Документация по API</a>
+              </li>
+              <li>
+                <a href="#">Отзывы пользователей</a>
+              </li>
+              <li>
+                <a href="#">Помощь</a>
+              </li>
+              <li>
+                <h3 class="h3 h3-question">По вопросам клиентов:</h3>
+              </li>
+              <li>
+                <a href="#">support@adesk.ru</a>
+              </li>
+              <li>
+                <a href="#">+7 (495) 106-21-00</a>
+              </li>
+              <li>
+                <h3 class="h3 h3-offers">Предложения и сотрудничество:</h3>
+              </li>
+              <li>
+                <a href="#">inbox@adesk.ru</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="services">
+          <div class="money-transfers services__flex" >
+            <img src="../src/img/visa.svg" alt="visa" width="49" height="24">
+            <img src="../src/img/mastercard.svg" alt="mastercard" width="33" height="24" >
+            <img src="../src/img/тинькофф.svg" alt="tinkoff" width="104" height="10">
+          </div>
+          <div class="app-stores services__flex" >
+            <button class="button app-stores__button"><img src="../src/img/apple.svg" alt="App Store">App Store</button>
+            <button class="button app-stores__button"><img src="../src/img/google play.svg" alt="Google Play">Google Play</button>
+          </div>
+        </div>
+        <div class="services top-line">
+          <div class="social-network services__flex">
+            <p>ООО «Адеск», 2022</p>
+            <p>Политика конфиденциальности</p>
+            <p>Договор-оферта</p>
+          </div>
+          <div class="annotation services__flex">
+            <img src="../src/img/Telegram.svg" alt="Telegram" width="22" height="22">
+            <img src="../src/img/Facebook.svg" alt="Facebook" width="22" height="22">
+            <img src="../src/img/WK.svg" alt="WK" width="22" height="22">
+            <img src="../src/img/YouTube.svg" alt="YouTube" width="22" height="22">
+            <img src="../src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
+          </div>
+        </div>
+        
+      </div>
+    </footer>
 </body>
 </html>
