--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adesk</title>
   <link rel="stylesheet prefetch" href="https://cdn.rawgit.com/mfd/e7842774e037edf15919037594a79b2b/raw/665bdfc532094318449f1010323c84013d5af953/graphik.css">
+  <link href="./src/style/style.css" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
         <div class="menu__flex">
-            <img class="menu-logo" src="../src/img/logo.svg" alt="logo" width="104" height="24">
+            <img class="menu-logo" src="./src/img/logo.svg" alt="logo" width="104" height="24">
             <nav class="menu" data-nav>
               <ul class="menu__list">
                 <a class="menu__link" href="https://example.com">
@@ -31,7 +33,7 @@
                   <li class="menu__item">Цены</li></a>
             </nav>
           <div class="button-conteiner">
-            <button class="button demo"><img class="btm-img" src="../src/img/Alina.png" alt="#" width="22" height="22">Записаться на демо</button>
+            <button class="button demo"><img class="btm-img" src="./src/img/Alina.png" alt="#" width="22" height="22">Записаться на демо</button>
             <button class="button in">Войти</button>
             <button class="button registration">Зарегистрироваться</button>
           </div>
@@ -47,17 +49,17 @@
         <p class="balance__paragraph">Для руководителя, который хочет эффективно распоряжаться ресурсами компании и извлекать из них максимум прибыли.</p>
         <button class="button button__balance">Протестировать бесплатно</button>
         <!-- изображения для широкоформатных мониторов (>990px) -->
-        <img class="balance__img desktop" src="../src/img/balance-hero.png" alt="hero"> 
+        <img class="balance__img desktop" src="./src/img/balance-hero.png" alt="hero"> 
         <!-- изображения для среднеформатных мониторов (990-600px) -->
-        <img class="balance__img middle" src="../src/img/balance-hero 990-600px.png" alt="hero">
+        <img class="balance__img middle" src="./src/img/balance-hero 990-600px.png" alt="hero">
         <!-- изображения для телефонов (600-375px) -->
-        <img class="balance__img mobile" src="../src/img/balance-hero 600-375px.png" alt="hero">
+        <img class="balance__img mobile" src="./src/img/balance-hero 600-375px.png" alt="hero">
       </div>
     </section>
 
     <section class="balance-determination">
       <div class="standard-container balance-determination__flex">
-        <img class="balance-determination__img" src="../src/img/jar with coins.png" alt="#" width="200" height="200">
+        <img class="balance-determination__img" src="./src/img/jar with coins.png" alt="#" width="200" height="200">
         <p class="balance-determination__description">Баланс — <strong>главный отчет собственника</strong>. Он поможет вам понять, где кроется прибыль, какими активами обладает бизнес и насколько эффективно они используются.</p>
       </div>
     </section>
@@ -69,7 +71,7 @@
           <p class="#">Где заморожена прибыль? Богатеет ли компания со временем? Кому принадлежит бизнес — вам или кредиторам? Насколько рационально используются ресурсы?</p>
           <p class="#">Все ответы ждут вас в балансе.</p>
         </div>
-        <img src="../src/img/financial-vision-img.png" alt="#" width="558" height="540">
+        <img src="./src/img/financial-vision-img.png" alt="#" width="558" height="540">
       </div>
     </section>
 
@@ -80,7 +82,7 @@
           <p class="#">На основе отчета Adesk сам посчитает важные метрики собственника: ROE, ликвидность, финансовую независимость и эффективность бизнеса, как актива.</p>
           <p class="#">Остается только проанализировать показатели и скорректировать стратегию развития компании.</p>
         </div>
-        <img src="../src/img/business-health-img.png" alt="#" width="558" height="540">
+        <img src="./src/img/business-health-img.png" alt="#" width="558" height="540">
       </div>
     </section>
 
@@ -89,9 +91,9 @@
         <h2 class="h2 blok-video__h2">Построить отчет поможет мастер сборки баланса 🧙‍♂</h2>
         <p class="paragraph blok-video__paragraph">Специальный робот вместе с вами пройдет все этапы сверки денег, запасов, обязательств и капитала, чтобы активы точно сошлись с пассивами.</p>
         <div class="conteiner-for-video">
-          <img class="head-video " src="../src/img/head-video-desktop.svg" alt="#">
-          <video muted autoplay loop class="blok-video__video" poster="../src/img/video.png">
-            <source src="vidios/balance_wizard.mp4" type="video/mp4">
+          <img class="head-video " src="./src/img/head-video-desktop.svg" alt="#">
+          <video muted autoplay loop class="blok-video__video" poster="./src/img/video.png">
+            <source src="src/vidios/balance_wizard.mp4" type="video/mp4">
           </video>
         </div>
       </div>
@@ -104,7 +106,7 @@
           <p class="#">После первичной сборки отчета сервис будет сам обновлять его на основании изменений данных в сервисе.</p>
           <p class="#">Отчет строится по принципу двойной записи, то есть каждое ваше действие в Adesk автоматически отображается в активах и пассивах.</p>
         </div>
-        <img src="../src/img/assembly.png" alt="#" width="558" height="540">
+        <img src="./src/img/assembly.png" alt="#" width="558" height="540">
       </div>
     </section>
 
@@ -121,25 +123,25 @@
     <footer class="footer">
       <div class="standard-container">
         <div class="footer__logo">
-          <img src="../src/img/logo-footer.svg" alt="logo" width="44" height="44">
+          <img src="./src/img/logo-footer.svg" alt="logo" width="44" height="44">
           <p class="footer__logo-paragraph">Рассчитывайте на <b>Adesk</b></p>
 
           <!-- Блок ссылок на социальные сети. Для Среднеформатных мониторов (990-600px) -->
           <div class="annotation services__flex annotation-middle removing-link-styles">
           <a href="#">
-            <img src="../src/img/Telegram.svg" alt="Telegram" width="22" height="22">
+            <img src="./src/img/Telegram.svg" alt="Telegram" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/Facebook.svg" alt="Facebook" width="22" height="22">
+            <img src="./src/img/Facebook.svg" alt="Facebook" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/WK.svg" alt="WK" width="22" height="22">
+            <img src="./src/img/WK.svg" alt="WK" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/YouTube.svg" alt="YouTube" width="22" height="22">
+            <img src="./src/img/YouTube.svg" alt="YouTube" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
+            <img src="./src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
           </a>
         </div>
         </div>
@@ -150,7 +152,7 @@
               <li class="accordion">
                 <button class="accordion__control">
                   <span class="accordion__title">Возможности</span>
-                  <span class="accordion__icon"><img src="../src/img/footer-Icon.svg" alt="#"></span>
+                  <span class="accordion__icon"><img src="./src/img/footer-Icon.svg" alt="#"></span>
                 </button>
                 <div class="accordion__content">
                   <ul>
@@ -194,7 +196,7 @@
               <li class="accordion">
                 <button class="accordion__control">
                   <span class="accordion__title">Adesk для бизнеса</span>
-                  <span class="accordion__icon"><img src="../src/img/footer-Icon.svg" alt="#"></span>
+                  <span class="accordion__icon"><img src="./src/img/footer-Icon.svg" alt="#"></span>
                 </button>
                 <div class="accordion__content">
                 <ul>
@@ -229,7 +231,7 @@
               <li class="accordion">
                 <button class="accordion__control">
                   <span class="accordion__title">Ресурсы</span>
-                  <span class="accordion__icon"><img src="../src/img/footer-Icon.svg" alt="#"></span>
+                  <span class="accordion__icon"><img src="./src/img/footer-Icon.svg" alt="#"></span>
                 </button>
                 <div class="accordion__content">
                   <ul>
@@ -240,7 +242,7 @@
                       <a href="#">Базовый курс о финансах</a>
                     </li>
                     <li>
-                      <a href="#">Расширенный курс по учету<img class="academic-cap" src="../src/img/academic-cap.svg" alt="#"></a>
+                      <a href="#">Расширенный курс по учету<img class="academic-cap" src="./src/img/academic-cap.svg" alt="#"></a>
                     </li>
                     <li>
                       <a href="#">Шаблон финансовой модели</a>
@@ -261,7 +263,7 @@
               <li class="accordion">
                 <button class="accordion__control">
                   <span class="accordion__title">Информация</span>
-                  <span class="accordion__icon"><img src="../src/img/footer-Icon.svg" alt="#"></span>
+                  <span class="accordion__icon"><img src="./src/img/footer-Icon.svg" alt="#"></span>
                 </button>
                 <div class="accordion__content">
                   <ul>
@@ -281,7 +283,7 @@
               <li class="accordion">
                 <button class="accordion__control">
                   <span class="accordion__title">Контакты</span>
-                  <span class="accordion__icon"><img src="../src/img/footer-Icon.svg" alt="#"></span>
+                  <span class="accordion__icon"><img src="./src/img/footer-Icon.svg" alt="#"></span>
                 </button>
                 <div class="accordion__content">
                   <ul>
@@ -384,7 +386,7 @@
                 <a href="#">Базовый курс о финансах</a>
               </li>
               <li>
-                <a href="#">Расширенный курс по учету<img class="academic-cap" src="../src/img/academic-cap.svg" alt="#"></a>
+                <a href="#">Расширенный курс по учету<img class="academic-cap" src="./src/img/academic-cap.svg" alt="#"></a>
               </li>
               <li>
                 <a href="#">Шаблон финансовой модели</a>
@@ -435,32 +437,32 @@
         </div>
         <div class="services">
           <div class="money-transfers services__flex" >
-            <img src="../src/img/visa.svg" alt="visa" width="49" height="24">
-            <img src="../src/img/mastercard.svg" alt="mastercard" width="33" height="24" >
-            <img src="../src/img/тинькофф.svg" alt="tinkoff" width="104" height="10">
+            <img src="./src/img/visa.svg" alt="visa" width="49" height="24">
+            <img src="./src/img/mastercard.svg" alt="mastercard" width="33" height="24" >
+            <img src="./src/img/тинькофф.svg" alt="tinkoff" width="104" height="10">
           </div>
           <div class="app-stores services__flex" >
-            <button class="button app-stores__button"><img src="../src/img/apple.svg" alt="App Store">App Store</button>
-            <button class="button app-stores__button"><img src="../src/img/google play.svg" alt="Google Play">Google Play</button>
+            <button class="button app-stores__button"><img src="./src/img/apple.svg" alt="App Store">App Store</button>
+            <button class="button app-stores__button"><img src="./src/img/google play.svg" alt="Google Play">Google Play</button>
           </div>
         </div>
 
         <!-- Блок ссылок на социальные сети. Для мобильных телефонов (600-375px) -->
         <div class=" services__flex annotation-mobile removing-link-styles">
           <a href="#">
-            <img src="../src/img/Telegram.svg" alt="Telegram" width="22" height="22">
+            <img src="./src/img/Telegram.svg" alt="Telegram" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/Facebook.svg" alt="Facebook" width="22" height="22">
+            <img src="./src/img/Facebook.svg" alt="Facebook" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/WK.svg" alt="WK" width="22" height="22">
+            <img src="./src/img/WK.svg" alt="WK" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/YouTube.svg" alt="YouTube" width="22" height="22">
+            <img src="./src/img/YouTube.svg" alt="YouTube" width="22" height="22">
           </a>
           <a href="#">
-            <img src="../src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
+            <img src="./src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
           </a>
         </div>
         <div class="services top-line">
@@ -479,23 +481,24 @@
           <!-- Блок ссылок на социальные сети. Для широкоформатных мониторов (>990px) -->
           <div class="annotation services__flex annotation-desktop removing-link-styles">
             <a href="#">
-              <img src="../src/img/Telegram.svg" alt="Telegram" width="22" height="22">
+              <img src="./src/img/Telegram.svg" alt="Telegram" width="22" height="22">
             </a>
             <a href="#">
-              <img src="../src/img/Facebook.svg" alt="Facebook" width="22" height="22">
+              <img src="./src/img/Facebook.svg" alt="Facebook" width="22" height="22">
             </a>
             <a href="#">
-              <img src="../src/img/WK.svg" alt="WK" width="22" height="22">
+              <img src="./src/img/WK.svg" alt="WK" width="22" height="22">
             </a>
             <a href="#">
-              <img src="../src/img/YouTube.svg" alt="YouTube" width="22" height="22">
+              <img src="./src/img/YouTube.svg" alt="YouTube" width="22" height="22">
             </a>
             <a href="#">
-              <img src="../src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
+              <img src="./src/img/Instagram.svg" alt="Instagram.svg" width="22" height="22">
             </a>
           </div>
         </div>
       </div>
     </footer>
+    <script src="./src/index.js"></script>
 </body>
 </html>
