--- a/index.html
+++ b/index.html
@@ -499,6 +499,6 @@
         </div>
       </div>
     </footer>
-    <script src="./src/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
